# YACA

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  advanced_catalog_audit_report.json  analysis_report.json  analyze_results.js  audit_empty_catalogs_report.json  backend_audit.md  catalog_test_results.json  check_doc_keywords.js  clear_cache.js  clear_caches.js  clear_mongo.js  debug_id_cache.js  eslint.config.js  fetch_state.js  find_doc_correct_keywords.js  find_slapstick_keywords.js  find_user.js  index.js  out.txt  out2.txt  output.txt  package-lock.json  package.json  preset_count_order_report.json  preset_validation_results.json  presets_dump.json  quick_eval.js  relevance_validation_report.json  render.yaml  response.json  search_keywords.js  secrets.env.example  server.js  set_kids_mode.js  testParamParser.js  test_all_presets.js  (+31 more)
Watchly-main/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  procfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
Watchly-main/app/: __init__.py
Watchly-main/app/api/: router.py
Watchly-main/app/core/: __init__.py  app.py  base_client.py  config.py  constants.py  security.py  settings.py
Watchly-main/app/models/: __init__.py  scoring.py  stremio.py  taste_profile.py  token.py
Watchly-main/app/services/: catalog.py  catalog_updater.py  cinemeta_service.py  gemini.py  interest_summary.py  manifest.py  redis_service.py  row_generator.py  rpdb.py  scoring.py  (+4 more)
Watchly-main/scripts/: generate_release_notes.py
(+472 files in other folders)
